scrollbar hide, add categories, and fixed home

--- a/crackgame/src/index.css
+++ b/crackgame/src/index.css
@@ -11,6 +11,11 @@ body {
 
 }
 
+html, body {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;   
+}
+
 nav {
     font-family: 'Poppins', sans-serif;
 }
